--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -300,9 +300,11 @@ Full-Width Styles
 #project_title {
   margin: 0;
   color: #fff;
-  font-size: 42px;
-  font-weight: 700;
+  font-size: 80px;
+  font-weight: 100;
   text-shadow: #111 0px 0px 10px;
+  
+  text-align: center;
 }
 
 #project_tagline {
